--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raycasting Test</title>
+
+    <style>
+        canvas#minimap {
+            position : absolute;
+        }
+        canvas#minimapobjects {
+            position : absolute;
+        }
+    </style>
+
 </head>
 <body>
 
