--- a/index.html
+++ b/index.html
@@ -8,10 +8,33 @@
 
     <style>
         canvas#minimap {
-            position : absolute;
+        position : absolute;
         }
         canvas#minimapobjects {
-            position : absolute;
+        position : absolute;
+        }
+
+        div#floor {
+        position : absolute;
+        width : 100%;
+        height : 100%;
+        background-color : rgb(128,128,128);
+        }
+
+        div#ceiling {
+        position : absolute;
+        width : 100%;
+        height : 50%;
+        background-color : rgb(96,96,96);
+        }
+
+
+        #screen {
+        position : relative;
+        width : 620px;
+        height : 480px;
+        border : 1px solid black;
+        overflow : hidden;
         }
     </style>
 
